# NC-DOT-Bridge-Drone-Research-Project

./: .gitignore  LICENSE  README.md  TODO
code/ardroneDemo/guiFlightPlans/: initializePTAMAndDoRectangleThenLand  initializePTAMAndDoRectangleThenLand~
code/ardroneDemo/opencvHoughsExample/: CMakeLists.txt  main.cpp  test
code/ardroneDemo/roundelBasedManeuvering/: notes
code/cameraCalibration/opencvCameraCalibrationExample/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  VID5.xml~  VID5Sub.xml  cameraCalibration  camera_calibration.cpp  camera_calibration.cpp~  cmake_install.cmake  in_VID5.xml  in_VID5.xml~  log  notes  out_camera_data.xml
code/cameraCalibration/opencvCameraCalibrationExample/webcamCalibrations/: in_VID5.xml  out_camera_data.xml~  out_camera_data250Samples.xml~  webcamLSDSLAMCalibration  webcamLSDSLAMCalibration_out_camera_data  webcamLSDSLAMCalibration~  webcamLSDSlamCalibration250Samples  webcamLSDSlamCalibration250Samples~
code/cameraCalibration/rosCamera calibration/: instructions
code/lsd-slam/: commandToStartWithWebcam
code/lsd-slam/commandToStartWithNX30Images/: commandToStartWithNX30Images
code/stateEstimationFromQRCode/: CMakeLists.txt  QRCodeStateEstimator.cpp  QRCodeStateEstimator.hpp  README  estimateLocationFromQRCode  main.cpp
resources/documents/3DReconstruction/cameraCalibration/: links  links~  (+2 more)
resources/documents/panoramas/: links  links~  notes
resources/documents/parts/: partsList
resources/documents/stateEstimate/: notes~
resources/documents/stateEstimation/: notes
resources/requirements/: notes
(+24 files in other folders)
